--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
     maven { url "https://maven.terraformersmc.com/releases/" }
+    maven { url "https://cursemaven.com" }
 }
 
 dependencies {
@@ -26,6 +27,9 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     modApi "com.terraformersmc:modmenu:${project.modmenu_version}"
+
+    modImplementation "curse.maven:betterstats-667464:5076601"
+    modImplementation "curse.maven:tcdcommons-711539:5076629"
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
