still updating the name

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 0.1.4
-	maven_group = food
-	archives_base_name = food
+	maven_group = mitz_food
+	archives_base_name = mitz_food
 
 # Dependencies
 	# check this on https://modmuss50.me/fabric.html
